Fix avatar column is too wide

--- a/source/component/note/style.scss
+++ b/source/component/note/style.scss
@@ -19,7 +19,7 @@
     margin-bottom: $spacing-small;
 
     .avatar-column {
-        width: 60px;
+        width: 5.2rem;
     }
 
     .body-column {
